fix: Fix menu item card image overflowing

--- a/src/app/menu-category/menu-category.component.css
+++ b/src/app/menu-category/menu-category.component.css
@@ -57,4 +57,5 @@
 .menu-item img {
   height: 100%;
   object-fit: cover;
+  overflow: hidden;
 }
