--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -10,11 +10,13 @@
   padding: 0 10%;
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .menu-section-actions {
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
   gap: 24px;
   list-style: none;
 }
